# chat-bot

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  PROCESS.md  RAG_KNOWLEDGE_AND_GAP_ANALYSIS.md  README.md  design.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: package.json  pyproject.toml
apps/api/evals/: rag_evalset.jsonl
apps/api/src/nebulai/: __init__.py  main.py
apps/api/src/nebulai/api/: auth.py  chat.py  documents.py  health.py  providers.py
apps/api/src/nebulai/core/: auth.py  config.py  sse.py
apps/api/src/nebulai/evals/: __init__.py  retrieval_eval.py
apps/api/src/nebulai/rag/: __init__.py  answer.py  chunking.py  corrective.py  embeddings.py  graph.py  ingestion.py  ingestion_queue.py  memory.py  planning.py  provider_status.py  rerank.py  retrieval.py  schemas.py  synthesis.py
apps/api/src/nebulai/stores/: __init__.py  milvus.py  postgres.py  redis.py  schema.sql
apps/api/src/nebulai_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py  test_health.py  test_planning.py  test_retrieval_eval.py  test_synthesis.py
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx  route-tree.ts  router.tsx  styles.css
apps/web/src/components/: chat-shell.tsx  composer.tsx  document-panel.tsx  login-page.tsx  message-list.tsx  provider-panel.tsx  rag-timeline.tsx
docs/: ENTERPRISE_RAG_GAP_ROADMAP.md  PROVIDER_SMOKE.md  REGRESSION_CHECKLIST.md
infra/milvus/: README.md
(+12 files in other folders)
