[project]
name = "nebulai-api"
version = "0.0.0"
description = "FastAPI backend for nebulai bot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.5.0",
  "python-multipart>=0.0.9",
  "orjson>=3.10.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
  "langgraph>=0.2.0"
]

[project.optional-dependencies]
rag = [
  "langchain>=0.3.0",
  "pymilvus>=2.5.0",
  "pypdf>=4.0.0"
]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
